<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:id="@+id/tvPostsCounter2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="92dp"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="8dp"
        android:text="0"
        android:textSize="34sp"
        app:layout_constraintBottom_toTopOf="@+id/tvPostsCreated2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/tvPostsCounter"
        app:layout_constraintTop_toBottomOf="@+id/tvUserAccountType" />

    <TextView
        android:id="@+id/tvUserEmail"
        android:layout_width="256dp"
        android:layout_height="56dp"
        android:layout_marginBottom="24dp"
        android:background="@drawable/custom_input"
        android:drawablePadding="12dp"
        android:ems="10"
        android:gravity="center_vertical"
        android:paddingStart="12dp"
        android:paddingTop="0dp"
        android:paddingEnd="12dp"
        android:text="@string/emailexample_hint"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/tvUserRegistrationDate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="RtlCompat"
        app:drawableStartCompat="@drawable/custom_email_icon" />

    <Button
        android:id="@+id/btLogOut"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:width="140dp"
        android:backgroundTint="#3F51B5"
        android:text="@string/logout_btn"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/simple_bottom_navigation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/simple_bottom_navigation"
        style="@style/BottomNavigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:elevation="8dp"
        app:labelVisibilityMode="labeled"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:menu="@menu/bottom_simple_navigation_bar">

    </com.google.android.material.bottomnavigation.BottomNavigationView>

    <ImageView
        android:id="@+id/ivUserProfilePicture"
        android:layout_width="190dp"
        android:layout_height="186dp"
        android:layout_marginTop="35dp"
        android:background="@drawable/rounded_corner"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvUserName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/username_tv"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivUserProfilePicture" />

    <TextView
        android:id="@+id/tvUserAccountType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/accounttype_tv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvUserName" />

    <TextView
        android:id="@+id/tvUserRegistrationDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:text="@string/exampleregisterdate_hint"
        app:layout_constraintBottom_toTopOf="@+id/btLogOut"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tvPostsCreated"
        android:layout_width="129dp"
        android:layout_height="51dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="24dp"
        android:text="@string/madeposts_tv"
        android:textAlignment="center"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/tvUserEmail"
        app:layout_constraintEnd_toStartOf="@+id/tvPostsCreated2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tvPostsCreated2"
        android:layout_width="129dp"
        android:layout_height="51dp"
        android:layout_marginBottom="24dp"
        android:text="@string/obtaineddonations_tv"
        android:textAlignment="center"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/tvUserEmail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/tvPostsCreated" />

    <TextView
        android:id="@+id/tvPostsCounter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="8dp"
        android:text="@string/postscounter_tv"
        android:textSize="34sp"
        app:layout_constraintBottom_toTopOf="@+id/tvPostsCreated"
        app:layout_constraintEnd_toStartOf="@+id/tvPostsCounter2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvUserAccountType" />


</androidx.constraintlayout.widget.ConstraintLayout>