<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".password_recover.ChangePasswordActivity">

    <EditText
        android:id="@+id/etNewPassword"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginStart="64dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="64dp"
        android:background="@drawable/custom_input"
        android:drawableStart="@drawable/custom_password_icon"
        android:drawablePadding="12dp"
        android:ems="10"
        android:hint="@string/newpassword_hint"
        android:inputType="textPassword"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <Button
        android:id="@+id/btConfirmPasswordChange"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="64dp"
        android:width="140dp"
        android:backgroundTint="#3F51B5"
        android:text="@string/changepassword_btn"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etConfirmNewPassword" />

    <EditText
        android:id="@+id/etConfirmNewPassword"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginStart="64dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="64dp"
        android:background="@drawable/custom_input"
        android:drawableStart="@drawable/custom_password_icon"
        android:drawablePadding="12dp"
        android:ems="10"
        android:hint="@string/confirmpassword_hint"
        android:inputType="textPassword"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etNewPassword" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/writepassword_tv"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#3F51B5"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>