<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/imageView"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_marginTop="35dp"
        android:padding="6dp"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:shapeAppearanceOverlay="@style/Circular"
        app:srcCompat="@drawable/solidarity"
        app:strokeColor="@color/black"
        app:strokeWidth="0dp" />

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="299dp"
        android:layout_height="52dp"
        android:layout_marginStart="64dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="64dp"
        android:background="@drawable/custom_input"
        android:drawableStart="@drawable/custom_email_icon"
        android:drawablePadding="12dp"
        android:ems="10"
        android:hint="@string/email_hint"
        android:inputType="textEmailAddress"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="300dp"
        android:layout_height="56dp"
        android:layout_marginStart="64dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="64dp"
        android:background="@drawable/custom_input"
        android:drawableStart="@drawable/custom_lock_icon"
        android:drawablePadding="12dp"
        android:ems="10"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etEmail"
        android:importantForAutofill="no" />

    <Button
        android:id="@+id/btLogin"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="64dp"
        android:width="140dp"
        android:backgroundTint="#3F51B5"
        android:text="@string/login_btn"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etPassword" />

    <TextView
        android:id="@+id/tvForgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="120dp"
        android:text="@string/forgotpassword_tv"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="#3F51B5"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btLogin" />


</androidx.constraintlayout.widget.ConstraintLayout>