<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".password_recover.RecoveryKeyActivity">

    <TextView
        android:id="@+id/textView6"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="64dp"
        android:editable="false"
        android:fontFamily="sans-serif-light"
        android:text="@string/checkemail_tv"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#3F51B5"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.529"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etRecoveryKey"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginStart="64dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="64dp"
        android:background="@drawable/custom_input"
        android:drawableStart="@drawable/custom_password_icon"
        android:drawablePadding="12dp"
        android:ems="10"
        android:hint="@string/recoverkey_hint"
        android:inputType="textEmailAddress"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.529"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <Button
        android:id="@+id/btSendRecoveryPasswordKey"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="64dp"
        android:width="140dp"
        android:backgroundTint="#3F51B5"
        android:text="@string/checkcode_btn"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etRecoveryKey" />
</androidx.constraintlayout.widget.ConstraintLayout>